--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             margin-bottom: 10px;
             font-weight: bold;
         }
+        .required::after {
+            content: "※必須";
+            color: red;
+            margin-left: 5px;
+        }
         input[type="text"], input[type="tel"], textarea {
             width: 100%;
             padding: 10px;
@@ -43,6 +48,7 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
+            background-color: #f0f8ff;
         }
         .visit-buttons, .symptoms {
             display: flex;
@@ -168,19 +174,19 @@
 <body>
     <div class="container">
         <h1>予約フォーム2</h1>
-        <label for="name">お客様名※必須</label>
+        <label for="name" class="required">お客様名</label>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
-        <label for="phone">電話番号※必須</label>
+        <label for="phone" class="required">電話番号</label>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
-        <label>ご来店回数※必須</label>
+        <label class="required">ご来店回数</label>
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">初めて</button>
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
         </div>
 
-        <label>症状※必須</label>
+        <label class="required">症状</label>
         <div class="symptoms">
             <button type="button" onclick="selectSymptom(this)">軽症</button>
             <button type="button" onclick="selectSymptom(this)">中等症</button>
@@ -258,187 +264,88 @@
             selectedSymptom = button.textContent;
         }
 
-function selectDate(cell) {
-    const cells = document.querySelectorAll('.calendar td');
-    cells.forEach(td => td.classList.remove('selected'));
-    cell.classList.add('selected');
-
-    const selectedDay = cell.getAttribute('data-date'); // ISO形式の日付
-    const selectedTime = cell.parentElement.firstChild.textContent; // 時間
-    const date = new Date(selectedDay);
-
-    // 日付部分を「○○年○○月○○日 ○○:○○」形式に変換
-    selectedFullDate = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${selectedTime}`;
-
-    // 変換後の日付を第1希望日の入力フィールドに設定
-    document.getElementById('date1').value = selectedFullDate;
-}
-
-        function submitForm() {
-            const formData = {
-                name: document.getElementById('name').value,
-                phone: document.getElementById('phone').value,
-                visitCount: visitCount,
-                selectedSymptom: selectedSymptom,
-                dates: [selectedFullDate],
-                message: document.getElementById('message').value
-            };
-
-// フォームデータのチェック
-if (!formData.name || !formData.phone || !formData.visitCount) {
-    alert('お名前・電話番号・ご来店回数すべてご記入ください。');
-    return;
-}
-
-            // LINEトークにメッセージを送信
-            liff.sendMessages([{
-                type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
-            }]).then(() => {
-                /* メッセージ送信成功時の処理 */
-                alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
-                /* LIFFウィンドウを閉じる */
-                liff.closeWindow();
-            }).catch((err) => {
-                /* メッセージ送信失敗時の処理 */
-                console.error('メッセージの送信に失敗しました', err);
-            });
+        function selectDate(date, cell) {
+            const cells = document.querySelectorAll('#calendar1 td');
+            cells.forEach(cell => cell.classList.remove('selected'));
+            cell.classList.add('selected');
+            selectedFullDate = date;
         }
 
-function formatDate(dateStr) {
-    if (!dateStr) return '';
-    const date = new Date(dateStr);
-    return `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${('0' + date.getHours()).slice(-2)}:${('0' + date.getMinutes()).slice(-2)}`;
-}
+        function fetchAvailability(startDate) {
+            const calendarBody = document.querySelector('#calendar1 tbody');
+            const calendarHeader = document.querySelector('#calendar-header');
+            const loadingSpinner = document.getElementById('loadingSpinner');
+            const currentMonth = document.getElementById('currentMonth');
+            const formattedDate = startDate.toISOString().split('T')[0];
 
-        async function fetchAvailability(date) {
-            const startTime = new Date(date);
-            const endTime = new Date(date);
-            endTime.setDate(endTime.getDate() + 7);
-
-            const cacheKey = startTime.toISOString() + endTime.toISOString();
-
-            // キャッシュを確認
-            if (availabilityCache[cacheKey]) {
-                console.log('Using cached data');
-                updateCalendar(availabilityCache[cacheKey]);
+            if (availabilityCache[formattedDate]) {
+                updateCalendar(availabilityCache[formattedDate], calendarBody, calendarHeader, currentMonth, startDate);
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbwJcAUuZYWzIE8OnQoCbJQGDfyRMew1AzQBaZOOXw7_NaHlS9WPHyzCLq5BKqCeoRMRgw/exec' + 
-                        `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
+            loadingSpinner.style.display = 'block';
 
-            try {
-                showLoadingSpinner(); // Show loading spinner
-                const response = await fetch(url);
-                const data = await response.json();
-                console.log(data);
-
-                // データをキャッシュに保存
-                availabilityCache[cacheKey] = data;
-
-                updateCalendar(data);
-            } catch (error) {
-                console.error('Error fetching availability:', error);
-            } finally {
-                hideLoadingSpinner(); // Hide loading spinner
-            }
+            google.script.run.withSuccessHandler(function(data) {
+                availabilityCache[formattedDate] = data;
+                updateCalendar(data, calendarBody, calendarHeader, currentMonth, startDate);
+                loadingSpinner.style.display = 'none';
+            }).withFailureHandler(function(error) {
+                console.error('データの取得に失敗しました:', error);
+                loadingSpinner.style.display = 'none';
+            }).getWeeklyData(startDate);
         }
 
-        function updateCalendar(availability) {
-            const calendar = document.getElementById('calendar1');
-            const table = calendar.querySelector('table tbody');
+        function updateCalendar(data, calendarBody, calendarHeader, currentMonth, startDate) {
+            calendarBody.innerHTML = '';
+            calendarHeader.innerHTML = '';
+            const daysOfWeek = ['日', '月', '火', '水', '木', '金', '土'];
 
-            const times = [
-                '10:00', '10:30', '11:00', '11:30',
-                '12:00', '12:30', '13:00', '13:30',
-                '14:00', '14:30', '15:00', '15:30',
-                '16:00', '16:30', '17:00', '17:30'
+            const headerRow = document.createElement('tr');
+            headerRow.innerHTML = '<th>時間</th>';
+            for (let i = 0; i < 7; i++) {
+                const day = new Date(startDate);
+                day.setDate(day.getDate() + i);
+                const th = document.createElement('th');
+                th.textContent = daysOfWeek[day.getDay()] + ' ' + (day.getMonth() + 1) + '/' + day.getDate();
+                headerRow.appendChild(th);
+            }
+            calendarHeader.appendChild(headerRow);
+
+            currentMonth.textContent = `${startDate.getFullYear()}年${startDate.getMonth() + 1}月`;
+
+            const timeSlots = [
+                '9:00', '9:30', '10:00', '10:30', '11:00', '11:30',
+                '12:00', '12:30', '13:00', '13:30', '14:00', '14:30',
+                '15:00', '15:30', '16:00', '16:30', '17:00', '17:30'
             ];
 
-            if (table.rows.length === 0) {
-                for (const time of times) {
-                    const row = document.createElement('tr');
-                    const timeCell = document.createElement('td');
-                    timeCell.textContent = time;
-                    row.appendChild(timeCell);
+            timeSlots.forEach(time => {
+                const row = document.createElement('tr');
+                const timeCell = document.createElement('td');
+                timeCell.textContent = time;
+                row.appendChild(timeCell);
 
-                    for (let i = 0; i < 7; i++) {
-                        const cell = document.createElement('td');
-                        cell.addEventListener('click', () => selectDate(cell));
-                        row.appendChild(cell);
+                for (let i = 0; i < 7; i++) {
+                    const day = new Date(startDate);
+                    day.setDate(day.getDate() + i);
+                    const formattedDate = day.toISOString().split('T')[0];
+                    const cell = document.createElement('td');
+                    cell.setAttribute('data-date', formattedDate);
+                    cell.setAttribute('data-time', time);
+
+                    if (data[formattedDate] && data[formattedDate].includes(time)) {
+                        cell.classList.add('available');
+                        cell.addEventListener('click', function() {
+                            selectDate(formattedDate + ' ' + time, cell);
+                        });
+                    } else {
+                        cell.classList.add('unavailable');
                     }
 
-                    table.appendChild(row);
+                    row.appendChild(cell);
                 }
-            }
-
-            // テーブルのヘッダーを更新
-            updateCalendarHeader(currentDate);
-
-            // 各セルを空白にリセット
-            for (let row of table.rows) {
-                for (let i = 1; i < row.cells.length; i++) {
-                    row.cells[i].textContent = '';
-                    row.cells[i].removeAttribute('data-date');
-                }
-            }
-
-// テーブルの内容を更新
-for (let i = 0; i < 7; i++) {
-    const day = new Date(currentDate);
-    day.setDate(day.getDate() + i);
-
-    for (let j = 0; j < times.length; j++) {
-        const cell = table.rows[j].cells[i + 1];
-        const slotStart = new Date(day);
-        slotStart.setHours(parseInt(times[j].split(':')[0]), parseInt(times[j].split(':')[1]), 0, 0); // 修正ポイント: ミリ秒まで指定
-
-        const slotEnd = new Date(slotStart);
-        slotEnd.setMinutes(slotStart.getMinutes() + 30);
-
-        const count = availability.reduce((acc, slot) => {
-            const eventStart = new Date(slot.startTime);
-            const eventEnd = new Date(slot.endTime);
-
-            if (eventStart < slotEnd && slotStart < eventEnd) {
-                return acc + 1;
-            }
-            return acc;
-        }, 0);
-
-        if (count === 0) {
-            cell.textContent = '◯';
-        } else if (count === 1) {
-            cell.textContent = '✕';
-        } else {
-            cell.textContent = '✕';
-        }
-
-        cell.setAttribute('data-date', slotStart.toISOString());
-    }
-}
-
-        }
-
-        function updateCalendarHeader(date) {
-            const headerRow = document.getElementById('calendar-header');
-            const headers = headerRow.querySelectorAll('th:not(:first-child)');
-
-            const startDate = new Date(date);
-
-            headers.forEach((th, index) => {
-                const day = new Date(startDate);
-                day.setDate(day.getDate() + index);
-
-const dayOfWeek = ['日', '月', '火', '水', '木', '金', '土'];
-const dayString = `${day.getDate()}(${dayOfWeek[day.getDay()]})`;
-th.innerHTML = dayString.replace('(', '<br>(');
+                calendarBody.appendChild(row);
             });
-
-            // 現在の月を表示
-            const currentMonthElement = document.getElementById('currentMonth');
-            currentMonthElement.textContent = `${startDate.getFullYear()}年 ${startDate.getMonth() + 1}月`;
         }
 
         function nextWeek() {
@@ -451,12 +358,32 @@ th.innerHTML = dayString.replace('(', '<br>(');
             fetchAvailability(currentDate);
         }
 
-        function showLoadingSpinner() {
-            document.getElementById('loadingSpinner').style.display = 'block';
-        }
+        function submitForm() {
+            const name = document.getElementById('name').value;
+            const phone = document.getElementById('phone').value;
+            const message = document.getElementById('message').value;
 
-        function hideLoadingSpinner() {
-            document.getElementById('loadingSpinner').style.display = 'none';
+            if (!name || !phone || !visitCount || !selectedSymptom || !selectedFullDate) {
+                alert('全ての必須項目を入力してください。');
+                return;
+            }
+
+            const formData = {
+                name,
+                phone,
+                visitCount,
+                symptom: selectedSymptom,
+                date: selectedFullDate,
+                message
+            };
+
+            google.script.run.withSuccessHandler(function(response) {
+                alert('予約が完了しました。');
+                console.log('予約成功:', response);
+            }).withFailureHandler(function(error) {
+                alert('予約に失敗しました。');
+                console.error('予約失敗:', error);
+            }).submitReservation(formData);
         }
     </script>
 </body>
