--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
             font-weight: bold;
         }
         .required::after {
-            content: "※必須";
+            content: "※";
             color: red;
             margin-left: 5px;
         }
         .input-group {
-            background-color: #e0f7fa;
+            background-color: #ff4c4c;
+            color: #fff;
             padding: 15px;
             margin-bottom: 20px;
             border-radius: 8px;
@@ -53,7 +54,8 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
-            background-color: #f0f8ff;
+            background-color: #fff;
+            color: #000;
         }
         .visit-buttons, .symptoms {
             display: flex;
